@@ -1,5 +1,8 @@
 2011-09-13  Andreas Kupries  <andreask@activestate.com>
 
+	* generic/hwloc.c: Fixed option processing of 'hwloc create',
+	* tests/create.test: plus associated updates to the testsuite.
+
 	* generic/hwloc.c: Updated name of the package init function,
 	  forgotten yesterday.
 
